# ESP32Precision

./: .gitignore  LICENSE  README.md
Arduino_Accel_Test/: CMakeLists.txt
EspIDFMotorDriver/motor-driver/: CMakeLists.txt  sdkconfig
EspIDFMotorDriver/motor-driver/main/: mcpwm_bdc_control_example_main.c
FlightControl/: CMakeLists.txt  sdkconfig  sdkconfig.old
FlightControl/components/Guidance/: CMakeLists.txt  Guidance.c
FlightControl/components/Guidance/include/: Guidance.h
FlightControl/components/Guidance/test/: CMakeLists.txt  testGuidance.c
FlightControl/components/IMU/: CMakeLists.txt  IMU.c
FlightControl/components/LIS2DW12/: CMakeLists.txt  LIS2DW12.c
FlightControl/components/MotorDriver/: CMakeLists.txt  MotorDriver.c
FlightControl/main/: CMakeLists.txt  MissionControl.c  MissionControl.h  QueueHandler.h  hardware.h  main.c  motorcommand.h  motorcontrol.h
FlightControl/test/: CMakeLists.txt  sdkconfig
FlightControl/test/main/: CMakeLists.txt  unit_test.c
Provided_Accel_Test/: Provided_Accel_Test.ino
TestADC_Arduino/: TestADC_Arduino.ino
TestAccel/: CMakeLists.txt
TestAccel/main/: CMakeLists.txt  main.c
TestCamera/: TestCamera.ino
Test_Accel/: Test_Accel.ino
build_test/: MAIN_testbench.vcd  io_spec_in.txt  post_synth_results.v  sim-sources-dump.v  synth_script.ys  test  test-sim-dump.v  tmpnetlist.edif
testServomotors/: testServomotors.ino
test_Pcnt_motor/: test_Pcnt_motor.ino
test_i2c/: test_i2c.ino
testmotors/: testmotors.ino
testmotors_and_i2c/: testmotors_and_i2c.ino
testpcnt/: testpcnt.ino
(+11 files in other folders)
